// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation with narrow parent renders with a horizontal layout 1`] = `
<nav
  class="css-view-1dbjc4n r-flexDirection-18u37iz r-justifyContent-1wtj0ep"
  data-testid="navigation"
  role="navigation"
  style="background-color: rgb(75, 54, 124);"
>
  <div
    class="css-view-1dbjc4n r-flexDirection-18u37iz"
  >
    <mock-navigation-icon
      accessibilitylabel="Home"
      href="/"
      source="some-image.png"
      testid="navigation-home-icon"
    />
    <mock-navigation-icon
      accessibilitylabel="Live Channels"
      href="/channels"
      source="some-image.png"
      testid="navigation-channels-icon"
    />
    <mock-navigation-icon
      accessibilitylabel="Categories"
      href="/categories"
      source="some-image.png"
      testid="navigation-categories-icon"
    />
    <mock-navigation-icon
      accessibilitylabel="Search"
      href="/search"
      source="some-image.png"
      testid="navigation-search-icon"
    />
  </div>
  <div
    class="css-view-1dbjc4n r-flexDirection-18u37iz"
  >
    <mock-navigation-icon
      accessibilitylabel="Settings"
      href="/settings"
      source="some-image.png"
      testid="navigation-settings-icon"
    />
  </div>
</nav>
`;

exports[`Navigation with wide parent renders with a vertical layout 1`] = `
<nav
  class="css-view-1dbjc4n r-flexDirection-eqz5dr r-justifyContent-1wtj0ep"
  data-testid="navigation"
  role="navigation"
  style="background-color: rgb(75, 54, 124);"
>
  <div
    class="css-view-1dbjc4n r-flexDirection-eqz5dr"
  >
    <mock-navigation-icon
      accessibilitylabel="Home"
      href="/"
      source="some-image.png"
      testid="navigation-home-icon"
    />
    <mock-navigation-icon
      accessibilitylabel="Live Channels"
      href="/channels"
      source="some-image.png"
      testid="navigation-channels-icon"
    />
    <mock-navigation-icon
      accessibilitylabel="Categories"
      href="/categories"
      source="some-image.png"
      testid="navigation-categories-icon"
    />
    <mock-navigation-icon
      accessibilitylabel="Search"
      href="/search"
      source="some-image.png"
      testid="navigation-search-icon"
    />
  </div>
  <div
    class="css-view-1dbjc4n r-flexDirection-eqz5dr"
  >
    <mock-navigation-icon
      accessibilitylabel="Settings"
      href="/settings"
      source="some-image.png"
      testid="navigation-settings-icon"
    />
  </div>
</nav>
`;
